--- a/Dokumentation/docu.tex
+++ b/Dokumentation/docu.tex
@@ -29,6 +29,7 @@
 \item 4 MB Flash-Speicher
 \item Programmierung in C
 \item NodeMCU-Board
+\item ESP-12E
 \item Programmierung per Arduino möglich
 \item Selbstinduziertes Schlafen und Aufwecken des Chips (Stromsparen)
 \end{itemize}
