--- a/Dokumentation/docu.tex
+++ b/Dokumentation/docu.tex
@@ -16,6 +16,9 @@
 \author{Aaron Winziers\\Benedikt Lüken-Winkels}
 \begin{document}
 
+\maketitle
+\tableofcontents
+\newpage
 
 %===============
 %
@@ -48,8 +51,6 @@
 
 
 
-\maketitle
-\tableofcontents
 \newpage
 
 
