--- a/Dokumentation/docu.tex
+++ b/Dokumentation/docu.tex
@@ -111,6 +111,11 @@
 \end{itemize}
 \end{itemize}
 
+%===============
+%  Subsection
+%===============
+
+\subsubsection{LiquidCristral Library}
 
 %===============
 %
