Bissl die Verkabelung erklärt

--- a/Dokumentation/docu.tex
+++ b/Dokumentation/docu.tex
@@ -115,6 +115,17 @@
 %  Subsection
 %===============
 
+\subsubsection{Verkabelung}
+
+% Tutorial 
+% https://www.instructables.com/id/Step-By-Step-LCD-wiring-4-Bit-Mode-and-Programmi/
+
+Um die Kommunikation zwischen Arduino und dem LCD zu gewährleisten musste das Breadboard auch entsprechend verkabelt werden. Dazu musste ein Weiteres Powersupply angesteckt werden da der Arduino nur 3V3 Output hat und 5V gebraucht sind um das LCD anzusteuern.
+
+%===============
+%  Subsection
+%===============
+
 \subsubsection{LiquidCristral Library}
 
 %===============
