Bissl Doku erweitert

--- a/Dokumentation/docu.tex
+++ b/Dokumentation/docu.tex
@@ -122,11 +122,13 @@
 
 Um die Kommunikation zwischen Arduino und dem LCD zu gewährleisten musste das Breadboard auch entsprechend verkabelt werden. Dazu musste ein Weiteres Powersupply angesteckt werden da der Arduino nur 3V3 Output hat und 5V gebraucht sind um das LCD anzusteuern.
 
+Das Prozess die Einheiten du verbinden war jedoch eine große Herausforderung, da 
+
 %===============
 %  Subsection
 %===============
 
-\subsubsection{LiquidCristral Library}
+\subsubsection{LiquidCristal Library}
 
 %===============
 %
