--- a/Dokumentation/docu.tex
+++ b/Dokumentation/docu.tex
@@ -26,6 +26,19 @@
 %
 %===============
 
+\section{Ablauf}
+
+\begin{enumerate}
+\item Kommunikationsaufbau
+\end{enumerate}
+
+
+%===============
+%
+%  Section
+%
+%===============
+
 \section{Hardware}\label{sec:hard}
 
 
